--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
 pydantic = {extras = ["email"], version = "^2.6.4"}
 pytest = "^8.1.1"
+httpx = "^0.27.0"
 
 
 [build-system]
