--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ uvicorn = "^0.29.0"
 pydantic = {extras = ["email"], version = "^2.6.4"}
 pytest = "^8.1.1"
 httpx = "^0.27.0"
+pydantic-extra-types = "^2.6.0"
+phonenumbers = "^8.13.33"
 
 
 [build-system]
