--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pytest = "^8.1.1"
 httpx = "^0.27.0"
 pydantic-extra-types = "^2.6.0"
 phonenumbers = "^8.13.33"
+coverage = "^7.4.4"
+pytest-cov = "^5.0.0"
 
 
 [build-system]
