--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pydantic-extra-types = "^2.6.0"
 phonenumbers = "^8.13.33"
 coverage = "^7.4.4"
 pytest-cov = "^5.0.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [build-system]
